--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "build": "npm i",
-    "dev": "nodemon server.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [
     "data",
